--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,8 @@
 --items: 3;
 --indent: 30px;
 
-
+--anmtn-slow: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 body
@@ -158,13 +159,14 @@ img {
     align-items: center;
     }
     
-.heder-portfolio-border-one {
+.heder-border-one {
     border-bottom: 1px solid #ECECEC;
     margin-bottom: 5px;
     }
 
-.heder-portfolio-border {
-    border-bottom: 1px solid #ECECEC;   
+.heder-border-portfolio {
+    border-bottom: 1px solid #ECECEC;
+    
 }
    
 
@@ -193,7 +195,10 @@ img {
     letter-spacing: 0.02em;
     color: var(--txt-deep-grey);
     padding-top: 32px;
-    padding-bottom: 32px;}
+    padding-bottom: 32px;
+    transition: color, var(--anmtn-slow)
+    
+}
 
 .heder-padding-one {
     
@@ -219,6 +224,7 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--txt-gray);
+    transition: color, var(--anmtn-slow)
     }
 
 .heder-contact:hover,
@@ -235,20 +241,12 @@ img {
 
 .mail-svg,
 .phone-svg {
-     display: inline-block;
+    display: inline-block;
     vertical-align: middle;    
     margin-right: 10px;
-    fill: var(--txt-gray);
+    fill: currentColor;
     
 }
-
-.mail-svg,
-.phone-svg
- {
-    fill: currentColor;
-}
-
-
 
 
 /* main */
@@ -262,17 +260,17 @@ img {
     max-width: 1600px;
     margin-right: auto;
     margin-left: auto;
-    
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),
      url(../images/hw-04-background.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    padding: 200px, 0;
+}
 
-        }
-
-.hero-list {
+.hero-center {
     text-align: center;}
+    
 
 .section-one-h1 { 
     
@@ -285,8 +283,6 @@ img {
     color: var(--txt-white);
     margin-right: auto;
     margin-left: auto;
-    margin-top: 90px;
-       
 }
 
 
@@ -297,11 +293,8 @@ img {
     color: var(--txt-white);
     background-color:var(--accent-txt-color);
     padding: 10px 30px;
-    margin-top: 30px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 90px;
-
+    margin-right: 30px;
+    transition: color, var(--anmtn-slow)
 }
 
 
@@ -377,8 +370,7 @@ img {
     /* identical to box height */
     text-align: center;
     color: var(--txt-deep-grey);
-    margin-top: 30px;
-    margin-bottom: 10px;
+    padding-top: 30px;
     }
 
 .section-one-p-banda {
@@ -386,13 +378,15 @@ img {
     line-height: 1.19;
     /* identical to box height */
     text-align: center;
-    margin-bottom: 16px;
+    padding-top: 10px;
+    
     } 
 
 .social-media {
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    padding-top: 16px;
+    padding-bottom: 30px;
 }    
 
 .social-media-item:not(:last-child) {
@@ -410,6 +404,7 @@ img {
     background-color: white;
     border-radius: 50%;
     color: #AFB1B8;
+    transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow)
 
 }
 
@@ -438,15 +433,13 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    
     height: 92px;
+    color: #AFB1B8;
     border: 1px solid #AFB1B8;
-    border-radius: 4px;}
-
-.clients-link {
-    color:  #AFB1B8;
-
+    border-radius: 4px;
+    transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow);
 }
+
 
 .clients-link:hover,
 .clients-link:focus {
@@ -481,7 +474,8 @@ fill: currentColor;
         color: var(--txt-deep-grey);
         background-color: transparent;
         background-color: var(--txt-light-gray);
-        
+        transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow);
+        box-shadow, var(--anmtn-slow);
         }
 .btn-portfolio-right:not(:last-child) {
     margin-right: 8px;
@@ -531,7 +525,9 @@ fill: currentColor;
 
 .card-border {
     display: block;
+    transition: box-shadow, var(--anmtn-slow);
 }
+
 .card-border:hover,
 .card-border:focus
  {
@@ -550,9 +546,14 @@ fill: currentColor;
 
 .footer-background {
 background-color: var(--heder-footer);
+padding-top: 60px;
+padding-bottom: 60px;
 
 }
 
+.footer-address-flex {
+    align-items: baseline
+}
 .footer-adress-contact {
     margin-right: 70px;
 }
@@ -583,6 +584,7 @@ color: var(--txt-white);
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--txt-gray-glass);
+    transition: color, var(--anmtn-slow);
         
 }
 
@@ -591,10 +593,7 @@ color: var(--txt-white);
     color: var(--accent-txt-color);}
 
     
-.section-footer-media {
-    margin-top: 12px;
-  
-}
+
 
 
 .footer-h3 {
@@ -625,11 +624,11 @@ color: var(--txt-white);
         background-color: rgba(255, 255, 255, 0.1);
         border-radius: 50%;
         color: white;
-
+        transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow);
  }
  
  .footer-media-link:hover,
- .footeer-media-link:focus {
+ .footer-media-link:focus {
      color: var(--txt-white);
      background-color: #2196F3;
  }
