--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 --items: 3;
 --indent: 30px;
 
---anmtn-slow: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+--anmtn-slow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -73,6 +73,10 @@ img {
 
 
 /* comon styles start */
+
+.no-scroll {
+    overflow: hidden;
+}
 
 
 .section {
@@ -167,6 +171,8 @@ img {
 .heder-border-portfolio {
     border-bottom: 1px solid #ECECEC;
     
+   
+    
 }
    
 
@@ -198,6 +204,25 @@ img {
     padding-bottom: 32px;
     transition: color, var(--anmtn-slow)
     
+}
+
+.current {
+    position: relative;
+    
+}
+
+
+
+.current:after {
+ content: "";
+ position: absolute;
+ left: 0;
+ width: 100%;
+ height: 4px;
+ background-color: var(--accent-txt-color);
+ border-radius: 2px;
+ bottom: -2px;
+ 
 }
 
 .heder-padding-one {
@@ -344,6 +369,33 @@ img {
    
     --items: 4;
 }
+
+.wrk-pic-bckgrnd {
+    position: relative;
+    
+    
+}
+
+.wrk-txt-bckgrnd {
+    display: flex;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--txt-white);
+    background-color: rgba(47, 48, 58, 0.8);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 70px;
+    justify-content: center;
+    align-items: center
+    
+}
+
+
+
+
 
 .banda-background {
     background-color: #F5F4FA;
@@ -514,6 +566,8 @@ fill: currentColor;
     
 } 
 
+
+
 .pottfolio-p-style {
     line-height: 1.88;
     color: var(--txt-gray);
@@ -535,13 +589,42 @@ fill: currentColor;
     rgba(0, 0, 0, 0.1), 0px 1px 2px 
     rgba(0, 0, 0, 0.08), 0px 2px 2px 
     rgba(0, 0, 0, 0.12);
-
-        
 } 
 
+.card-set-blur {
+    position: relative;
+    overflow: hidden;
+}
 
-
+.portfolio-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 63px 24px;
+    background-color: rgba(33, 150, 243, 0.9);;
+    width: 100%;
+    height: 297px;
+    transition: transform var(--anmtn-slow);
     
+}
+
+.card-set-blur:hover .portfolio-overlay {
+transform: translateY(0%);
+
+}
+
+.portfolio-dcrptn {
+    font-size: 18px;
+    line-height: 1.56;
+    color: var(--txt-white); 
+}
+
+
+
 /* footer */
 
 .footer-background {
@@ -639,4 +722,65 @@ color: var(--txt-white);
 
  .footer-media-item:not(:last-child) {
      margin-right: 10px;
+ }
+
+
+ /* window */
+
+ .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: initial;
+    transition: opacity var(--anmtn-slow), visibility var(--anmtn-slow);
+
+
+ }
+ .backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+ }
+
+ .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 528px;
+    min-height: 581px;
+    background-color: var(--txt-white);
+    border-radius: 4px;
+    box-shadow:
+     0px 1px 3px rgba(0, 0, 0, 0.12),
+     0px 1px 1px rgba(0, 0, 0, 0.14),
+     0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+ }
+
+ .modal-close-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    transform: translate(-8px, 8px);
+    background-color: var(--txt-white);
+    border-radius: 50% ;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    
+
+
+
  }
