--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,7 @@ fill: currentColor;
 .card-border {
     display: block;
     transition: box-shadow, var(--anmtn-slow);
+    
 }
 
 .card-border:hover,
@@ -600,21 +601,21 @@ fill: currentColor;
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
     transform: translateY(100%);
-    display: flex;
-    align-items: center;
+    display:flex;
+    align-content: center;
     justify-content: center;
     padding: 63px 24px;
-    background-color: rgba(33, 150, 243, 0.9);;
+    background-color: rgba(33, 150, 243, 0.9);
     width: 100%;
-    height: 297px;
+    height: 100%;
     transition: transform var(--anmtn-slow);
     
 }
 
-.card-set-blur:hover .portfolio-overlay {
+.card-set-blur:hover .portfolio-overlay{
 transform: translateY(0%);
-
 }
 
 .portfolio-dcrptn {
@@ -622,7 +623,6 @@ transform: translateY(0%);
     line-height: 1.56;
     color: var(--txt-white); 
 }
-
 
 
 /* footer */
