--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 --items: 3;
 --indent: 30px;
 
---anmtn-slow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+--anmtn-slow: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -290,7 +290,7 @@ img {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding: 200px, 0;
+    padding: 200px 0;
 }
 
 .hero-center {
@@ -308,6 +308,7 @@ img {
     color: var(--txt-white);
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 30px;
 }
 
 
@@ -316,10 +317,9 @@ img {
     line-height: 1.88;
     letter-spacing: 0.06em; 
     color: var(--txt-white);
-    background-color:var(--accent-txt-color);
+    background-color: var(--accent-txt-color);
     padding: 10px 30px;
-    margin-right: 30px;
-    transition: color, var(--anmtn-slow)
+    transition: color var(--anmtn-slow), background-color var(--anmtn-slow);
 }
 
 
@@ -389,7 +389,8 @@ img {
     width: 100%;
     height: 70px;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    
     
 }
 
@@ -456,7 +457,7 @@ img {
     background-color: white;
     border-radius: 50%;
     color: #AFB1B8;
-    transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow)
+    transition: color var(--anmtn-slow), background-color var(--anmtn-slow);
 
 }
 
@@ -489,7 +490,7 @@ img {
     color: #AFB1B8;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
-    transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow);
+    transition: color var(--anmtn-slow), border var(--anmtn-slow) ;
 }
 
 
@@ -497,7 +498,7 @@ img {
 .clients-link:focus {
     color: #2196F3;
     border: 1px solid #2196F3;
-    background-color: var(--txt-white);
+    
 }
 
 
@@ -526,8 +527,8 @@ fill: currentColor;
         color: var(--txt-deep-grey);
         background-color: transparent;
         background-color: var(--txt-light-gray);
-        transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow);
-        box-shadow, var(--anmtn-slow);
+        transition: color, var(--anmtn-slow), background-color var(--anmtn-slow),
+        box-shadow var(--anmtn-slow);
         }
 .btn-portfolio-right:not(:last-child) {
     margin-right: 8px;
@@ -545,7 +546,10 @@ fill: currentColor;
 }
 
 
-.btn-colored {color: var(--txt-white); background-color: var(--accent-txt-color);}
+.btn-colored {
+    color: var(--txt-white); 
+    background-color: var(--accent-txt-color);
+}
 
 
 .portfolio-border {
@@ -579,7 +583,7 @@ fill: currentColor;
 
 .card-border {
     display: block;
-    transition: box-shadow, var(--anmtn-slow);
+    transition: box-shadow var(--anmtn-slow);
     
 }
 
@@ -621,8 +625,8 @@ transform: translateY(0%);
 .portfolio-dcrptn {
     font-size: 18px;
     line-height: 1.56;
-    color: var(--txt-white); 
-}
+    color: var(--txt-white);
+  }
 
 
 /* footer */
@@ -705,14 +709,13 @@ color: var(--txt-white);
         height: 44px;
         background-color: rgba(255, 255, 255, 0.1);
         border-radius: 50%;
-        color: white;
-        transition: color, var(--anmtn-slow); background-color, var(--anmtn-slow);
+        color: var(--txt-white);
+        transition: background-color var(--anmtn-slow);
  }
  
  .footer-media-link:hover,
  .footer-media-link:focus {
-     color: var(--txt-white);
-     background-color: #2196F3;
+    background-color: #2196F3;
  }
 
  .footer-media-icon {
